[project]
name = "imagegenpoc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "inference-sdk>=0.12.0",
    "numpy>=2.3.1",
    "openai>=1.93.0",
    "roboflow>=1.2.0",
    "transformers>=4.53.1",
]

[tool.uv]
dev-dependencies = [
    "ipykernel>=6.29.5",
]
