[project]
name = "imagegenpoc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116.0",
    "inference-sdk>=0.12.0",
    "numpy<2.0.0",
    "openai>=1.93.0",
    "pydantic>=2.11.7",
    "roboflow>=1.2.0",
    "transformers>=4.53.1",
]

[tool.uv]
dev-dependencies = [
    "ipykernel>=6.29.5",
]

